--- a/css/master.css
+++ b/css/master.css
@@ -6,12 +6,10 @@
 *:focus {
     outline: none;
 }
-/* ------------------------------
-GLOBAL CSS
------------------------------- */
-:before, :after {
-    -webkit-box-sizing: border-box;
+/* Include padding and border in the element's total width and height. */
+*, *:before, *:after {
     -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
 body {
