--- a/css/skills.css
+++ b/css/skills.css
@@ -1,11 +1,46 @@
-#skills {
-    margin-bottom: 72px;
-}
 #skills p,
 #skills a {
     color: #56656C;
     text-align: center;
 }
+.skills-wrap-item {
+    padding: 25px;
+}
 .box {
     padding-top: 36px;
+    width: 350px;
+}
+.box p {
+    font-size: 14px;
+}
+/* Special effects on hover HTML,CSS,JS */
+.style {
+	width: 210px;
+	height: 210px;
+	margin: 0 auto;
+}
+.ch-item {
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
+	cursor: default;
+	box-shadow: inset 0 0 0 1px rgba(255,255,255,0.1), 0 1px 2px rgba(0,0,0,0.1);
+	-webkit-transition: all 0.4s ease-in-out;
+	-moz-transition: all 0.4s ease-in-out;
+	-o-transition: all 0.4s ease-in-out;
+	-ms-transition: all 0.4s ease-in-out;
+	transition: all 0.4s ease-in-out;
+}
+.ch-img-1 {
+	background-image: url('../images/html/001-computer.svg');
+}
+.ch-img-2 {
+	background-image: url('../images/css/002-css.svg');
+}
+.ch-img-3 {
+	background-image: url('../images/js/ffe500-js-256.png');
+}
+/* Move white border circle out */
+.ch-item:hover {
+	box-shadow: inset 0 0 0 12px rgba(255,255,255,1), 0 1px 2px rgba(0,0,0,1);
 }
